tst QR