@@ -10,6 +10,8 @@ import java.io.DataOutputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 
@@ -17,27 +19,34 @@ public class GenerateQR {
 
     @WebServlet("/GenerateQRServlet")
     public static class GenerateQRServlet extends HttpServlet {
+        protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+            // Handle GET requests if needed
+            response.getWriter().write("GET method is not supported. Please use POST.");
+        }
         protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
             String apiUrl = "https://api.vietqr.io/v2/generate";
             String clientId = "e6049258-1661-4bab-8bce-97425fdcee07";
             String apiKey = "d537d39f-a760-4fcf-8056-88b178527063";
+            int price = Integer.parseInt(request.getParameter("price"));
 
             // Request payload
-            String payload = "curl --location --request POST '"+ apiUrl+"' " +
-                    "--header 'x-client-id: "+ clientId+"' " +
-                    "--header 'x-api-key: "+ apiKey+"' " +
-                    "--header 'Content-Type: application/json' " +
-                    "--data-raw '{" +
-                    "    accountNo: 0311000746048," +
-                    "    accountName: Local Xplorer," +
-                    "    acqId: 970415," +
-                    "    addInfo: Local Xplorer," +
-                    "    amount: "+ clientId+"," +
-                    "    template: compact" +
-                    "}'";
+            String payload = "{" +
+                    "accountNo: 0311000746048," +
+                    "accountName: Local Xplorer," +
+                    "acqId: 970415," +
+                    "addInfo: Local Xplorer," +
+                    "amount: " + price + "," +
+                    "template: compact" +
+                    "}";
 
             // Create HTTP connection
-            URL url = new URL(apiUrl);
+            URI uri = null;
+            try {
+                uri = new URI(apiUrl);
+            } catch (URISyntaxException e) {
+                throw new RuntimeException(e);
+            }
+            URL url = uri.toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("POST");
             connection.setRequestProperty("x-client-id", clientId);
@@ -60,12 +69,14 @@ public class GenerateQR {
                     while ((line = reader.readLine()) != null) {
                         apiResponse.append(line);
                     }
+                    request.setAttribute("apiResponse", apiResponse.toString());
 
                     // Process the response as needed
-                    response.getWriter().write("API Response: " + apiResponse.toString());
+                    request.getRequestDispatcher("/views/test.jsp").forward(request,response);
                 }
             } else {
-                response.getWriter().write("API Request Failed with response code: " + responseCode);
+                request.setAttribute("errorMessage", "API Request Failed with response code: " + responseCode);
+                request.getRequestDispatcher("/views/test.jsp").forward(request,response);
             }
 
             // Close connection
